--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,26 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>com.mycila.maven-license-plugin</groupId>
+				<artifactId>maven-license-plugin</artifactId>
+				<version>1.10.b1</version>
+				<executions>
+					<execution>
+						<phase>clean</phase>
+						<goals>
+							<goal>format</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<strictCheck>true</strictCheck>
+					<header>${basedir}/LICENSE</header>
+					<includes>
+						<include>src/**</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
@@ -80,7 +100,7 @@
 							<goal>shade</goal>
 						</goals>
 					</execution>
-				</executions>				
+				</executions>
 				<configuration>
 					<minimizeJar>true</minimizeJar>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
