--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,18 @@
 				<configuration>
 					<minimizeJar>true</minimizeJar>
 					<shadedArtifactAttached>true</shadedArtifactAttached>
+					
+					<!-- Avoid SpecialSource clash -->
+					<filters>
+						<filter>
+							<artifact>org.ow2.asm:asm-debug-all</artifact>
+							<excludes>
+								<exclude>org/objectweb/asm/commons/Remapper.class</exclude>
+							</excludes>
+						</filter>
+					</filters>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
