--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,19 @@
 	<version>0.8-SNAPSHOT</version>
 	<name>Srg Mapping Manipulation Utility</name>
 
+	<repositories>
+		<repository>
+			<id>sonatype-oss-public</id>
+			<url>https://oss.sonatype.org/content/groups/public</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>net.sf.jopt-simple</groupId>
